--- a/сайт_секрет_сияния_однофайл_html.html
+++ b/сайт_секрет_сияния_однофайл_html.html
@@ -67,8 +67,8 @@
     <div class="hero card">
       <div class="hero-grid">
         <div>
-          <h1>Элегантная красота. Ваша уверенность.</h1>
-          <p>Салон «Секрет сияния» — авторские процедуры, премиальные бренды и атмосфера уюта. Подарите себе блеск и заботу.</p>
+          <h1>Элегантная красота - Ваша уверенность.</h1>
+          <p>Салон «Секрет сияния» — авторские процедуры, премиальные бренды и атмосфера уюта. Подарите себе блеск и заботу! </p>
           <div class="cta">
             <button class="btn btn-primary" id="openBooking">Записаться</button>
             <a class="btn" href="#contacts">Контакты</a>
@@ -80,7 +80,7 @@
           <p class="small">График работы: 10:00 — 20:00 (понедельник — выходной)</p>
           <p class="small">Телефон: <a href="tel:+791110295319">+7 911 102-95-19</a></p>
           <div class="gold-line"></div>
-          <p class="small">Адрес: г. Ростов-на-Дону, (укажите точный адрес)</p>
+          <p class="small">Адрес: г. Санкт-Петербург, улица Пушкина дом колотушкина 5 </p>
         </div>
       </div>
     </div>
@@ -93,17 +93,17 @@
         <div class="service">
           <h4>Мужская стрижка</h4>
           <p class="small">Классика и современные техники.</p>
-          <div class="price">от 1 500 ₽</div>
+          <div class="price">от 700 ₽</div>
         </div>
         <div class="service">
           <h4>Женская стрижка</h4>
           <p class="small">Индивидуальный подбор формы, укладка.</p>
-          <div class="price">от 2 500 ₽</div>
+          <div class="price">от 800 ₽</div>
         </div>
         <div class="service">
           <h4>Детская стрижка</h4>
           <p class="small">Бережно и аккуратно для детей.</p>
-          <div class="price">от 1 000 ₽</div>
+          <div class="price">от 600 ₽</div>
         </div>
       </div>
 
@@ -112,7 +112,7 @@
         <div class="service">
           <h4>Окрашивание</h4>
           <p class="small">Индивидуальный подбор оттенка, уход.</p>
-          <div class="price">от 4 500 ₽</div>
+          <div class="price">от 1500 ₽</div>
         </div>
       </div>
 
@@ -121,12 +121,12 @@
         <div class="service">
           <h4>Кератиновое выпрямление</h4>
           <p class="small">Блеск, гладкость и защита волос.</p>
-          <div class="price">от 5 000 ₽</div>
+          <div class="price">от 3000 ₽</div>
         </div>
         <div class="service">
           <h4>Ботокс для волос</h4>
           <p class="small">Восстановление структуры и упругости.</p>
-          <div class="price">от 4 000 ₽</div>
+          <div class="price">от ??? ₽</div>
         </div>
       </div>
 
@@ -135,17 +135,17 @@
         <div class="service">
           <h4>Ламинирование ресниц</h4>
           <p class="small">Естественный изгиб и уход.</p>
-          <div class="price">от 2 000 ₽</div>
+          <div class="price">от 1500 ₽</div>
         </div>
         <div class="service">
           <h4>Окрашивание ресниц и бровей</h4>
           <p class="small">Стойкий цвет и выразительность.</p>
-          <div class="price">от 1 200 ₽</div>
+          <div class="price">от 1500 ₽</div>
         </div>
         <div class="service">
           <h4>Оформление и коррекция бровей</h4>
           <p class="small">Форма и стиль под ваш образ.</p>
-          <div class="price">от 1 000 ₽</div>
+          <div class="price">от 1500 ₽</div>
         </div>
       </div>
 
@@ -154,7 +154,7 @@
         <div class="service">
           <h4>Маникюр премиум</h4>
           <p class="small">Комбинированный, гель-лак, дизайн.</p>
-          <div class="price">от 1 800 ₽</div>
+          <div class="price">от 2500 ₽</div>
         </div>
         <div class="service">
           <h4>Педикюр</h4>
@@ -194,18 +194,18 @@
         <div class="card contact-item">
           <h4>Соцсети и Telegram</h4>
           <p class="small">Подписывайтесь на акции и записи в Telegram:</p>
-          <p><a href="https://t.me/sekret_siyaniya" target="_blank" rel="noreferrer">https://t.me/sekret_siyaniya</a></p>
+          <p><a href="https://"http://t.me/Secret_siyaniya_bot target="_blank" rel="noreferrer">https://t.me/sekret_siyaniya</a></p>
         </div>
         <div class="card contact-item">
           <h4>Адрес</h4>
-          <p class="small">Ростов-на-Дону — укажите точный адрес для публикации карты.</p>
+          <p class="small">Санкт-Петербург .</p>
         </div>
       </div>
     </section>
 
     <footer>
       © «Секрет сияния» — все права защищены. <br>
-      <small class="small">Сайт подготовлен в элегантном бежево-золотом стиле. Для правок — обратитесь к разработчику.</small>
+      <small class="small"> Для правок — обратитесь к разработчику.</small>
     </footer>
   </div>
 
